syntax = "proto2";

package nerf;

import "google/protobuf/empty.proto";

service Api {
    rpc Connect (Request) returns (ApiResponse) {}
    rpc Disconnect (Notify) returns (google.protobuf.Empty) {}
    rpc Ping(PingRequest) returns (PingResponse) {}
}

service Server {
    rpc Connect (Request) returns (Response) {}
    rpc Disconnect (Notify) returns (google.protobuf.Empty) {}
    rpc Ping (PingRequest) returns (PingResponse) {}
}

message PingRequest {
    required int64 data = 1;
    required string login = 2;
}

message PingResponse {
    required int64 data = 1;
}

message Request {
    required string login = 1;
    required string token = 2;
}

message Response {
    required string config = 1;
    required string clientIP = 2;
    repeated string teams = 3;
    required string lightHouseIP = 4;
}

message ApiResponse {
    required string clientIP = 1;
    required string remoteIP = 2;
}

message Notify {
    required string login = 1;
}
